@@ -1,3 +1,9 @@
+2008-06-01  Joel Brobecker  <brobecker@adacore.com>
+
+	* rs6000-aix-tdep.c (rs6000_convert_from_func_ptr_addr): Do not
+	treat pointers in data space as function descriptors if the
+	target address is also in the data space.
+
 2008-05-30  Joel Brobecker  <brobecker@adacore.com>
 
 	* alpha-tdep.c (alpha_heuristic_frame_unwind_cache): Set
